# uh_environments

./: .gitignore  LICENSE  README.md  manifest.xml
src/uh_environments/: CMakeLists.txt  README.md  package.xml
src/uh_environments/config/: locations.yaml  sources.yaml
src/uh_environments/launch/: cob_navigation.launch  publish_locations.launch  publish_world.launch  robot_house_map.launch  uh-e125_map.launch
src/uh_environments/nodes/: location_publisher.py
src/uh_environments/objects/: coffee maker.dae  computer.dae  cooker.dae  cooker.dae~  cooker.stl  dishwasher.dae  doorbell.dae  doubleBed.dae  doubleBed.stl  flush.dae  flush.stl  fridge.dae  fridge.stl  kettle.dae  kettle.stl  large chair.dae  large chair.stl  large door.stl  light.dae  light.stl  microwave.dae  microwave.stl  small chair.dae  small door.dae  small drawer.dae  small lamp.dae  table.dae  table.stl  temperature, cold.dae  temperature, cold.stl  temperature, hot.dae  temperature, hot.stl  toaster.dae  toaster.stl  tv.dae
src/uh_environments/uh-e125/map/: map.pgm  map.yaml  navigation_goals.yaml
src/uh_environments/uh-robot-house/models/: robot_house.dae  robot_house_ground.dae  robot_house_walls.dae
src/uh_environments/uh-robot-house/urdf/: world.urdf.xacro  world_ground.urdf.xacro  world_walls.urdf.xacro
src/uh_simulation/: CMakeLists.txt  README.md  package.xml
src/uh_simulation/gazebo/models/: robot_house.dae  robot_house_ground.dae  robot_house_walls.dae
src/uh_simulation/gazebo/worlds/: empty.world  robot_house.world
src/uh_simulation/launch/: empty_world.launch  robot_house_gazebo.launch  spawn_robot.launch  start_person_sim.launch  start_webots.launch
src/uh_simulation/person_sim/config/: amcl.yaml  common_costmap.yaml  global_costmap.yaml  local_costmap.yaml  local_planner.yaml  navigation.yaml
src/uh_simulation/person_sim/urdf/: person.xacro
src/uh_simulation/webots/partials/: barriers.partial  researcher.partial  rosclock.partial  sunflower.partial
src/uh_simulation/webots/protos/: .ResizeableDoor.cache  .RosClock.cache  .sunflower_neck.cache  Person.proto  ResizeableDoor.proto  ResizeableTable.proto  ResizeableWall.proto  RosClock.proto  sunflower_head.proto  sunflower_lightpanel.proto  sunflower_neck.proto  sunflower_shell.proto  sunflower_tray.proto
src/uh_simulation/webots/src/: start_webots.cpp
src/uh_simulation/webots/worlds/: .robotHouseWithWallsAndResearcher2.wbproj  robotHouse.wbt  (+2 more)
(+15 files in other folders)
